# AEDA_feup

./: README.md
aeda1920_fp01/Tests/: parque.cpp  tests.cpp
aeda1920_fp02/Tests/: frota.cpp  frota.h  tests.cpp  veiculo.cpp  veiculo.h
aeda1920_fp03/Documentacao/html/: dir_de2a28e6d451579c33939713c771e40b.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html
aeda1920_fp03/Documentacao/rtf/: dir_de2a28e6d451579c33939713c771e40b.rtf  refman.rtf
aeda1920_fp03/Tests/: grafo.h  tests.cpp
aeda1920_fp04/Tests/: parque.cpp  parque.h  tests.cpp
aeda1920_fp05/Tests/: jogo.cpp
aeda1920_fp06/Tests/: balcao.cpp  stackExt.h  tests.cpp
aeda1920_fp09/Tests/: aposta.cpp  jogador.cpp  jogador.h
aeda_1920_fp10/Tests/: caixa.cpp  caixa.h  maquinaEmpacotar.cpp  tests.cpp
projetoaeda1/UghEatsFoodDelivery/: auxiliares.h  empresa.cpp  empresa.h  main.cpp  restaurante.h
projetoaeda1/UghEatsFoodDelivery/txt/: bases.txt  clientesFaro.txt  clientesPorto.txt  faro.txt  funcionariosPorto.txt  pratos.txt
projetoaeda1/UghEatsFoodDeliveryFinal/: CMakeLists.txt  cliente.cpp  cliente.h  empresa.cpp  empresa.h  main.cpp
projetoaeda1/UghEatsFoodDeliveryFinal/txt/: entregas.txt  funcionariosLisboa.txt
projetoaeda1/UghEatsFoodDeliveryFinal2/: auxiliares.cpp  cliente.h  empresa.cpp  empresa.h  main.cpp  restaurante.cpp
projetoaeda1/UghEatsFoodDeliveryFinal2/txt/: clientesLisboa.txt  clientesPorto.txt  entregas.txt  funcionariosFaro.txt  funcionariosPorto.txt  listanegra.txt  restaurantesFaro.txt  restaurantesLisboa.txt  restaurantesPorto.txt
projetoaeda1/teste1819aeda/: CMakeLists.txt
projetoaeda2/ugh01/: auxiliares.h  cliente.h  empresa.cpp  empresa.h  main.cpp  tabHFuncionario.h
projetoaeda2/ugh01/txt/: entregas.txt  (+9 more)
projetoaeda2/ugh02/: CMakeLists.txt  cliente.cpp  empresa.cpp  empresa.h  main.cpp
teste2/teste1617/: CMakeLists.txt  main.cpp
teste2/teste1617/Tests/: AfterSalesService.cpp  AfterSalesService.h  Article.cpp  Purchase.cpp
teste3/teste1718_pratica/: CMakeLists.txt  Expertize.cpp  FEUPConsulting.cpp  FEUPConsulting.h  Student.cpp  Test.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1314_ci3/: CMakeLists.txt  main.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1314_ci3/Tests/: ClubeVideo.cpp  ClubeVideo.h  Test.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1415_ci3/: CMakeLists.txt  main.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1415_ci3/Tests/: Supermercado.cpp  Supermercado.h  Test.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1516_ci3/: CMakeLists.txt
testes aeda diana/c2_c3_anos_anteriores/aeda1516_ci3/Tests/: Dish.cpp  Dish.h  Restaurant.cpp  Restaurant.h  Table.cpp  Test.cpp
testes aeda diana/c2_c3_anos_anteriores/aeda1718_ci2/: CMakeLists.txt
testes aeda diana/c2_c3_anos_anteriores/aeda1718_ci2/Tests/: Doctor.cpp  Hospital.cpp  Test.cpp
trabalho_parte2_entrega/AEDA1920Parte2_Turma2_G3/: BST.h  UGHEATS.pptx  auxiliares.cpp  auxiliares.h  empresa.cpp  empresa.h  main.cpp  restaurante.h  tabHFuncionario.h
trabalho_parte2_entrega/AEDA1920_Turma3_G3/: Doxyfile  empresa.cpp  empresa.h  main.cpp
trabalho_parte2_entrega/UghEats2/: Doxyfile
(+402 files in other folders)
